changed fold so that cover image takes up all space, gap for navbar is no longer visible under 1400px

--- a/src/styles/components/fold.module.css
+++ b/src/styles/components/fold.module.css
@@ -51,3 +51,10 @@
     padding: 15px 80px 15px 80px;
 }
 
+@media screen and (max-width: 1400px) {
+    .foldContainer {
+        height: 100vh;
+    }
+
+}
+
