--- a/src/styles/landingPage.module.css
+++ b/src/styles/landingPage.module.css
@@ -7,6 +7,12 @@
     right: 0;
 }
 
+@media screen and (max-width: 1400px) {
+    .navAndFold {
+        width: 100%;
+    }
+}
+
 
 
 
@@ -270,7 +276,7 @@
 
 
 .footerContainer {
-    height: 500px;
+    height: 700px;
     background-color: #292929;
     box-sizing: border-box;
     display: flex;
